syntax="proto3";

option go_package="./pb;pb";

import "user_message.proto";
import "google/protobuf/empty.proto";

message GetProfileResponse {
    User user = 1;
}

message UpdateProfileRequest {
    int64 id = 1;
    string name = 2;
    string avatar = 3;
}

message UpdateProfileResponse {
    User user = 1;
}

service UserService {
    rpc GetProfile(google.protobuf.Empty) returns (GetProfileResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}